// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edits an existing file correctly 1`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          <div
            class="content"
          >
            benchmark extensible e-business
            <div
              class="sub header"
            />
            <button
              class="ui basic icon left labeled button"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
              SD_8WX8QQ06
            </button>
          </div>
        </h1>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <h3
            class="ui blue medium header"
          >
            organization.jpeg
          </h3>
        </div>
        <div
          class="four wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui mini buttons"
          >
            <button
              class="ui basic button"
              data-testid="edit-button"
            >
              <i
                aria-hidden="true"
                class="pencil icon"
              />
              EDIT
            </button>
            <button
              class="ui primary button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <button
              class="ui basic icon button"
            >
              <i
                aria-hidden="true"
                class="trash alternate icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Status
          </h4>
          <span>
            <div
              class="ui orange tiny basic label"
            >
              Pending Review
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Document Type
          </h4>
          <span>
            <div
              class="ui tiny basic label"
            >
              <i
                aria-hidden="true"
                class="hospital icon"
              />
               Clinical/Phenotype Data
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Last Updated
          </h4>
          <span>
            <div
              class="ui tiny image label"
            >
              <img
                alt="xuzhu"
                src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
              />
              xuzhu
              <div
                class="detail"
              >
                <time
                  datetime="2018-09-27T05:32:26.000Z"
                  title="2018-09-27T05:32:26+00:00"
                >
                  7 months ago
                </time>
              </div>
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Size
          </h4>
          <span>
            <div
              class="ui tiny basic label"
            >
              5.5 kB
            </div>
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Description
          </h4>
          <p>
            <small>
              Month necessary animal end standard case. View system operation message decade. Actually sing because deal everything woman subject.
            </small>
          </p>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui segment p-0"
          >
            <div
              class="ui divided selection list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <button
                  class="ui mini icon primary right floated left labeled button"
                >
                  <i
                    aria-hidden="true"
                    class="cloud upload icon"
                  />
                  UPLOAD VERSION
                </button>
                <h4
                  class="ui header"
                >
                  Document Versions (
                  3
                  )
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="orange circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui purple mini tag label"
                  >
                    LATEST
                  </div>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_DMTKEFQW
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="orange circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_TT8NF09R
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="orange circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_2WV3VNJN
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`edits an existing file correctly 2`] = `
<div>
  <div
    class="ui large top attached menu"
  >
    <div
      class="ui container"
    >
      <div
        class="item"
      >
        <img
          alt="Kids First logo"
          src="test-file-stub"
          style="margin: -0.5em 0px; width: 2.0em;"
        />
      </div>
      <a
        aria-current="page"
        class="header item"
        href="/"
      >
        Data Tracker
      </a>
    </div>
  </div>
  <section
    id="study"
  >
    <div
      class="ui basic secondary segment"
    >
      <div
        class="ui container"
      >
        <h1
          class="ui header"
        >
          <div
            class="content"
          >
            benchmark extensible e-business
            <div
              class="sub header"
            />
            <button
              class="ui basic icon left labeled button"
            >
              <i
                aria-hidden="true"
                class="copy icon"
              />
              SD_8WX8QQ06
            </button>
          </div>
        </h1>
      </div>
    </div>
    <div
      class="ui container"
    >
      <div
        class="ui pink pointing secondary menu"
      >
        <a
          class="item"
          href="/study/SD_8WX8QQ06/basicInfo"
        >
          Basic Info
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/dashboard"
        >
          Dashboard
        </a>
        <a
          aria-current="page"
          class="item active"
          href="/study/SD_8WX8QQ06/documents"
        >
          Documents
        </a>
        <a
          class="item"
          href="/study/SD_8WX8QQ06/collaborators"
        >
          Collaborators
        </a>
      </div>
    </div>
  </section>
  <div
    class="ui basic vertical segment ui container"
  >
    <div
      class="ui grid"
    >
      <div
        class="row"
      >
        <div
          class="column"
        >
          <a
            data-testid="back-to-filelist"
            href="/study/SD_8WX8QQ06/documents"
          >
            <button
              class="ui mini basic left floated left labeled button"
            >
              <i
                aria-hidden="true"
                class="arrow left icon"
              />
              All Documents
            </button>
          </a>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <h3
            class="ui blue medium header"
          >
            mynewfile.txt
          </h3>
        </div>
        <div
          class="four wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui mini buttons"
          >
            <button
              class="ui basic button"
              data-testid="edit-button"
            >
              <i
                aria-hidden="true"
                class="pencil icon"
              />
              EDIT
            </button>
            <button
              class="ui primary button"
            >
              <i
                aria-hidden="true"
                class="download icon"
              />
              DOWNLOAD
            </button>
            <button
              class="ui basic icon button"
            >
              <i
                aria-hidden="true"
                class="trash alternate icon"
              />
            </button>
          </div>
        </div>
      </div>
      <div
        class="stretched row"
      >
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Status
          </h4>
          <span>
            <div
              class="ui teal tiny basic label"
            >
              Approved
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Document Type
          </h4>
          <span>
            <div
              class="ui tiny basic label"
            >
              <i
                aria-hidden="true"
                class="hospital icon"
              />
               Clinical/Phenotype Data
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Last Updated
          </h4>
          <span>
            <div
              class="ui tiny image label"
            >
              <img
                alt="xuzhu"
                src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
              />
              xuzhu
              <div
                class="detail"
              >
                <time
                  datetime="2018-09-27T05:32:26.000Z"
                  title="2018-09-27T05:32:26+00:00"
                >
                  7 months ago
                </time>
              </div>
            </div>
          </span>
        </div>
        <div
          class="four wide computer eight wide mobile eight wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Size
          </h4>
          <span>
            <div
              class="ui tiny basic label"
            >
              5.5 kB
            </div>
          </span>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <h4
            class="ui sub header"
          >
            Description
          </h4>
          <p>
            <small>
              Some description here
            </small>
          </p>
        </div>
      </div>
      <div
        class="row"
      >
        <div
          class="twelve wide computer sixteen wide mobile sixteen wide tablet column"
        >
          <div
            class="ui segment p-0"
          >
            <div
              class="ui divided selection list"
              role="list"
            >
              <div
                class="item"
                role="listitem"
              >
                <button
                  class="ui mini icon primary right floated left labeled button"
                >
                  <i
                    aria-hidden="true"
                    class="cloud upload icon"
                  />
                  UPLOAD VERSION
                </button>
                <h4
                  class="ui header"
                >
                  Document Versions (
                  3
                  )
                </h4>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="teal circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui purple mini tag label"
                  >
                    LATEST
                  </div>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-09-27T05:32:26.000Z"
                      title="2018-09-27T05:32:26+00:00"
                    >
                      7 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.5 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_DMTKEFQW
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="orange circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2018-08-21T03:16:11.000Z"
                      title="2018-08-21T03:16:11+00:00"
                    >
                      8 months ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    9.9 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_TT8NF09R
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
              <div
                class="item"
                role="listitem"
              >
                <i
                  aria-hidden="true"
                  class="orange circle icon middle aligned"
                />
                <div
                  class="content"
                >
                  <button
                    class="ui tiny header list--header-inline"
                  >
                    VersionFileName.js
                  </button>
                  <div
                    class="ui mini basic image label"
                  >
                    <img
                      alt="xuzhu"
                      src="https://lh5.googleusercontent.com/-zxrKRZrDo9w/AAAAAAAAAAI/AAAAAAAAABI/49brkBWBNdQ/photo.jpg"
                    />
                    <time
                      datetime="2017-08-25T00:05:30.000Z"
                      title="2017-08-25T00:05:30+00:00"
                    >
                      2 years ago
                    </time>
                  </div>
                  <button
                    class="ui mini basic label"
                  >
                    <i
                      aria-hidden="true"
                      class="download icon"
                    />
                    5.4 kB
                  </button>
                  <button
                    class="ui mini basic icon left labeled button micro-button"
                  >
                    <i
                      aria-hidden="true"
                      class="copy icon"
                    />
                    FV_2WV3VNJN
                  </button>
                  <div
                    class="description"
                  >
                    <small
                      data-testid="version-item"
                    >
                      <b>
                        Change Summary: 
                      </b>
                      version description
                    </small>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
